[gd_scene load_steps=52 format=2]

[ext_resource path="res://scenes/enemies/boss2/evilfemboyfishingbelike.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/introscorpion/Flippables.gd" type="Script" id=2]
[ext_resource path="res://raw_sprites/fish.png" type="Texture" id=3]
[ext_resource path="res://scenes/enemies/boss2/FuckitGoBack.gd" type="Script" id=4]
[ext_resource path="res://scenes/enemies/boss1/RandomAttacks.gd" type="Script" id=5]
[ext_resource path="res://n_plr_detector.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/boss2/GoAwayNOW.gd" type="Script" id=7]
[ext_resource path="res://scenes/enemies/introscorpion/idunno.gd" type="Script" id=8]
[ext_resource path="res://scenes/enemies/boss2/bossairfric.gd" type="Script" id=9]
[ext_resource path="res://scenes/enemies/boss2/AnimationPlayer.gd" type="Script" id=10]
[ext_resource path="res://scenes/enemies/boss2/DownDash.gd" type="Script" id=11]
[ext_resource path="res://wpnsys/hurt_stuff/nbasegun.tscn" type="PackedScene" id=12]
[ext_resource path="res://stun.gd" type="Script" id=13]
[ext_resource path="res://wpnsys/hurt_stuff/darkpistolresourcepacker.gd" type="Script" id=14]
[ext_resource path="res://wpnsys/hurt_stuff/commongundata.gd" type="Script" id=15]
[ext_resource path="res://wpnsys/hurt_stuff/statusThing.gd" type="Script" id=16]
[ext_resource path="res://bullets/stinger_ball.tscn" type="PackedScene" id=17]
[ext_resource path="res://wpnsys/hurt_stuff/hurt_component.gd" type="Script" id=18]
[ext_resource path="res://raw_sprites/nukingisnowlegal.png" type="Texture" id=19]
[ext_resource path="res://wpnsys/hurt_stuff/hurthitboxes/hitbox.tscn" type="PackedScene" id=20]
[ext_resource path="res://weapons/BisexualGun.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/enemies/boss2/FireBallz.gd" type="Script" id=22]
[ext_resource path="res://scenes/enemies/boss2/warning.gd" type="Script" id=23]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=24]
[ext_resource path="res://scenes/enemies/boss2/getsnipedidet.gd" type="Script" id=25]
[ext_resource path="res://raw_sprites/rofle.png" type="Texture" id=26]
[ext_resource path="res://raw_sprites/circletex.png" type="Texture" id=27]
[ext_resource path="res://scenes/enemies/boss2/Fuckitburstg.gd" type="Script" id=28]
[ext_resource path="res://bullets/hidden_bullet/fishb.tscn" type="PackedScene" id=29]
[ext_resource path="res://raw_sprites/twinkle.png" type="Texture" id=30]
[ext_resource path="res://hgunshot.wav" type="AudioStream" id=31]

[sub_resource type="Resource" id=14]
script = ExtResource( 15 )
gun_name = ""
gun_desc = ""
gun_fire_mode = 2
fires_before_charging = false
pellet_count = 1
burst_count = 1
cooldown = 0.2
max_charge = 1.0
spread = 0.0
recoil = 32.0
rotation_recoil = 0.0
damage = 1
speed = 0
bullet_lifetime = 5.0
no_cooldown = false

[sub_resource type="Resource" id=15]
script = ExtResource( 14 )
data_res = SubResource( 14 )
bullet = ExtResource( 17 )

[sub_resource type="CanvasItemMaterial" id=21]

[sub_resource type="Curve" id=22]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -1.01015, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=23]
offsets = PoolRealArray( 0.0295567, 0.182266, 0.597734, 0.852691, 0.988669 )
colors = PoolColorArray( 1, 0.962264, 0, 0, 0.984314, 0.94902, 0.211765, 1, 1, 0, 0, 1, 0, 0, 0, 0.501961, 0, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=29]
radius = 24.0

[sub_resource type="Resource" id=24]
script = ExtResource( 15 )
gun_name = ""
gun_desc = ""
gun_fire_mode = 0
fires_before_charging = false
pellet_count = 1
burst_count = 6
cooldown = 0.1
max_charge = 0.0
spread = 0.0
recoil = 0.0
rotation_recoil = 0.0
damage = 1
speed = 600
bullet_lifetime = 5.0
no_cooldown = false

[sub_resource type="Resource" id=25]
script = ExtResource( 14 )
data_res = SubResource( 24 )
bullet = ExtResource( 29 )

[sub_resource type="Curve" id=27]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.364407, 1.96591 ), -1.93091, -2.62222, 0, 0, Vector2( 1, 0 ), 0.526786, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=28]
interpolation_mode = 2
offsets = PoolRealArray( 0.00938967, 0.652582, 0.849765, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 rep_col : hint_color;



void fragment()
{
	
	vec4 rgba = texture(TEXTURE,UV);
	float gs = (rgba.r +rgba.g + rgba.b) / 3.0;
	
	if (gs==0.0)
	{
		rgba.rgb = rep_col.rgb;
	}
	
	COLOR = rgba;
	
}
"

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/rep_col = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=20]
radius = 11.51

[sub_resource type="CircleShape2D" id=12]

[sub_resource type="CircleShape2D" id=3]
radius = 240.533

[sub_resource type="Animation" id=13]
resource_name = "attackswim"
length = 0.237
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0533451, 0.105176, 0.140473 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hurt"
length = 0.027
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=26]
resource_name = "pgunout"
length = 0.237
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/BisexualGun:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.192981 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippables/BisexualGun:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.222204 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 59.9999, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "swim"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Bootlegeo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=19]

[node name="Entity" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 40
script = ExtResource( 1 )

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 9 )
gravity_enabled = false
gravity_only_when_not_on_floor = false

[node name="SpitGun" parent="." instance=ExtResource( 12 )]
unique_name_in_owner = true
_gun_data = SubResource( 15 )
is_enemy = true

[node name="EXparts" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource( 21 )
emitting = false
amount = 128
lifetime = 0.5
randomness = 1.0
local_coords = false
texture = ExtResource( 27 )
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2( 0, -1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 160.0
initial_velocity_random = 0.2
damping = 75.0
scale_amount = 4.0
scale_amount_random = 0.44
scale_amount_curve = SubResource( 22 )
color_ramp = SubResource( 23 )
hue_variation = 0.3

[node name="HurtComponent" type="Area2D" parent="."]
script = ExtResource( 18 )
is_enemy = true
path_entitystatus = NodePath("../StatusThing")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
rotation = 1.5708
shape = SubResource( 29 )

[node name="Flippables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[node name="BisexualGun" parent="Flippables" instance=ExtResource( 21 )]
unique_name_in_owner = true
position = Vector2( 15, -1 )
rotation = 1.0472
scale = Vector2( 1e-05, 1e-05 )
_gun_data = SubResource( 25 )

[node name="SpriteSheet" parent="Flippables/BisexualGun" index="0"]
texture = ExtResource( 26 )

[node name="Position2D" parent="Flippables/BisexualGun" index="1"]
position = Vector2( -9, -1 )

[node name="Twinkl3" type="CPUParticles2D" parent="Flippables/BisexualGun"]
unique_name_in_owner = true
position = Vector2( 23, -1 )
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
texture = ExtResource( 30 )
gravity = Vector2( 0, 0 )
angular_velocity = 360.0
scale_amount_curve = SubResource( 27 )
color_ramp = SubResource( 28 )

[node name="Bootlegeo" type="Sprite" parent="Flippables"]
material = SubResource( 16 )
texture = ExtResource( 3 )
offset = Vector2( -4, 0 )
hframes = 10

[node name="SwimBox" parent="Flippables" instance=ExtResource( 20 )]
unique_name_in_owner = true
position = Vector2( -4, -4 )
monitoring = false
damage = 1
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flippables/SwimBox"]
shape = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 12 )

[node name="StatusThing" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 16 )
MAX_HP = 215

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 24 )
initial_state = NodePath("Intro")

[node name="Intro" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
can_go_to_hurtstate = false
idle_state_path = NodePath(".")
attack_state_path = NodePath("../FireBallz")

[node name="RandomAttacks" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 5 )
can_go_to_hurtstate = false
attacks = [ NodePath("../FireBallz"), NodePath("../GoAwayNOW"), NodePath("../GoAwayAndShootPlayer"), NodePath("../GotoCenterToBecomeBhell") ]

[node name="GoAwayNOW" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
can_go_to_hurtstate = false
speed = 500.0
srt = NodePath("../DownDash")

[node name="DownDash" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 11 )
can_go_to_hurtstate = false

[node name="Timer" type="Timer" parent="StateMachine/DownDash"]
wait_time = 1.3
one_shot = true

[node name="DashResetDelay" type="Timer" parent="StateMachine/DownDash"]
wait_time = 0.3
one_shot = true

[node name="Delay" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 13 )
can_go_to_hurtstate = false
wait_time = 5.0
return_override = NodePath("../FuckitGoBack")

[node name="FireBallz" type="Node" parent="StateMachine"]
script = ExtResource( 22 )
can_go_to_hurtstate = false

[node name="GoAwayAndShootPlayer" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
can_go_to_hurtstate = false
speed = 500.0
srt = NodePath("../getsnipedidet")

[node name="getsnipedidet" type="Node" parent="StateMachine"]
script = ExtResource( 25 )
can_go_to_hurtstate = false

[node name="SnipeTime" type="Timer" parent="StateMachine/getsnipedidet"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/getsnipedidet"]
stream = ExtResource( 31 )
volume_db = 10.0
bus = "SFX"

[node name="FuckitGoBack" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 4 )
can_go_to_hurtstate = false
speed = 200
tate_to_return = NodePath("../RandomAttacks")

[node name="GotoCenterToBecomeBhell" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource( 4 )
can_go_to_hurtstate = false
speed = 100
tate_to_return = NodePath("../Fuckitburstg")

[node name="Fuckitburstg" type="Node" parent="StateMachine"]
script = ExtResource( 28 )
can_go_to_hurtstate = false

[node name="NewPlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlayerDetector"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
autoplay = "swim"
anims/attackswim = SubResource( 13 )
anims/hurt = SubResource( 11 )
anims/pgunout = SubResource( 26 )
anims/swim = SubResource( 5 )
script = ExtResource( 10 )

[node name="DummyRect" type="Control" parent="."]
unique_name_in_owner = true
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 24.0

[node name="FiringDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="FunnyWarnMessage" type="Node" parent="."]

[node name="Nukingisnowlegal" type="Sprite" parent="FunnyWarnMessage"]
unique_name_in_owner = true
position = Vector2( -224, 40 )
texture = ExtResource( 19 )
centered = false
hframes = 3
script = ExtResource( 23 )
COLORS = [ Color( 1, 0.984314, 0, 1 ), Color( 0.827451, 0.0705882, 0.0705882, 1 ), Color( 1, 1, 1, 1 ) ]

[node name="Line2D" type="Line2D" parent="FunnyWarnMessage/Nukingisnowlegal"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.282353 )
show_behind_parent = true
position = Vector2( 16, 32 )
points = PoolVector2Array( 0, -64, 0, 0 )
width = 32.0
default_color = Color( 1, 0.984314, 0, 1 )

[node name="getsnipedidiet" type="Sprite" parent="FunnyWarnMessage"]
unique_name_in_owner = true
visible = false
position = Vector2( -224, 40 )
texture = ExtResource( 19 )
hframes = 3

[node name="SnipeBox" parent="FunnyWarnMessage" instance=ExtResource( 20 )]
unique_name_in_owner = true
monitoring = false
damage = 1
is_enemy = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FunnyWarnMessage/SnipeBox"]
shape = SubResource( 19 )

[connection signal="is_gonna_fire" from="." to="StateMachine/FireBallz" method="_on_Entity_is_gonna_fire"]
[connection signal="charging" from="SpitGun" to="." method="_on_SpitGun_charging"]
[connection signal="fullypoweredup" from="SpitGun" to="." method="_on_SpitGun_fullypoweredup"]
[connection signal="funnyrecoil" from="SpitGun" to="." method="_on_SpitGun_funnyrecoil"]
[connection signal="postfired" from="SpitGun" to="StateMachine/FireBallz" method="_on_SpitGun_postfired"]
[connection signal="proj_created" from="SpitGun" to="." method="_on_SpitGun_proj_created"]
[connection signal="died" from="HurtComponent" to="." method="_on_HurtComponent_died"]
[connection signal="hurted" from="HurtComponent" to="." method="hp_check"]
[connection signal="hurted" from="HurtComponent" to="." method="_on_HurtComponent_hurted"]
[connection signal="postfired" from="Flippables/BisexualGun" to="StateMachine/Fuckitburstg" method="_on_BisexualGun_postfired"]
[connection signal="entered" from="StateMachine/DownDash" to="AnimationPlayer" method="_on_DownDash_entered"]
[connection signal="exited" from="StateMachine/DownDash" to="AnimationPlayer" method="_on_DownDash_exited"]
[connection signal="timeout" from="StateMachine/DownDash/Timer" to="StateMachine/DownDash" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/DownDash/DashResetDelay" to="StateMachine/DownDash" method="_on_DashResetDelay_timeout"]
[connection signal="entered" from="StateMachine/FireBallz" to="AnimationPlayer" method="_on_FireBallz_entered"]
[connection signal="timeout" from="StateMachine/getsnipedidet/SnipeTime" to="StateMachine/getsnipedidet" method="_on_SnipeTime_timeout"]
[connection signal="target_detected" from="NewPlayerDetector" to="StatusThing" method="_on_NewPlayerDetector_target_detected"]

[editable path="Flippables/BisexualGun"]
